tests/snapshots/compile_file__add_args.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/add_args.bend
---
@add = ($([+] $(a b)) (a b))

@main = a
  & @add ~ a
