tests/snapshots/compile_file__add_args.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/add_args.hvm
---
@add = ($(:[+] $(a b)) (a b))

@main = a
  & @add ~ a
