tests/snapshots/compile_file__addition.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/addition.hvm
---
@4 = (<2+ a> a)
@main = a
& @4 ~ (#8 a)

