tests/snapshots/compile_file__addition_const.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/addition_const.bend
---
@main = a
  & $(2 a) ~ [+1]
