tests/snapshots/compile_file__addition_const.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/addition_const.hvm
---
@main = #3

