tests/snapshots/compile_file__addition_var_fst.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/addition_var_fst.hvm
---
@main = (a b)
& #1 ~ <a <#1 b>>

