tests/snapshots/compile_file__adt_option_and.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/adt_option_and.hvm
---
@5 = ((@7 (@8 a)) a)
@6 = ((@B (@C a)) a)
@7 = (a (b c))
& @Some ~ ([b a] c)
@8 = (* @None)
@B = (a (b c))
& @5 ~ (b (a c))
@C = (* @None)
@None = (* (a a))
@Some = (a ((a b) (* b)))
@main = a
& @6 ~ (b (c a))
& @Some ~ (#3 c)
& @Some ~ (#1 b)

