tests/snapshots/compile_file__adt_string.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/adt_string.hvm
---
String is a built-in data type and should not be overridden.
