tests/snapshots/compile_file__and.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/and.hvm
---
@6 = (a a)
@8 = (* @false)
@and = (a ({2 @6 {2 @8 (a b)}} b))
@false = {2 * {2 a a}}
@main = a
& @and ~ (@true (@false a))
@true = {2 a {2 * a}}

